# pyopenfixer

./: AGENTS.md  LICENSE  README.md  config.json.example  pyproject.toml  requirements.locked.txt  requirements.txt  sonar-project.properties  sonar_violations.py
.github/workflows/: sonarcloud.yml
tests/: test_sonar_violations.py
