[project]
name = "pyopenfixer"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "requests==2.32.5",
]

[project.optional-dependencies]
test = [
    "pytest==8.4.2",
    "pytest-cov==7.1.0",
]

[tool.coverage.run]
relative_files = true

[tool.coverage.report]
show_missing = true
skip_empty = true
